# zoic

./: .gitignore  .gitignore~  .gitmodules  CMakeLists.txt  Makefile  README.md  README.md.orig  RELEASE.txt  SConstruct
ae/: aiZoicTemplate.py
arnoldCamera/: arnoldCamera.pro  arnoldcamera.h  arnoldcamera_global.h  imageReader  imageReader.cpp  imageReader_backup  imageReader_backup.cpp  imageReader_old  imageReader_old.cpp  lena2.ppm  lena_corrected.ppm  oblique_lensdistortion.cpp  oblique_lensdistortion.h  obq_perspective.cpp  testFile.cpp  testFile.cpp.txt  testScene.ass  testScene.exr  testScene.ma  testScene_hdr_nightscape.ma  testScene_lights.ass  testScene_lights.exr  thinlens_tungsten.cpp  vertical.ppm  zenoCamera (copy).cpp  zenoCamera.cpp  zenoCamera.os
arnoldCamera/imgs/: .report_dof_image_obvious_teapot.jpg-autosave.kra  teapot_CDF.png~  (+11 more)
cmake/: FindArnold.cmake
lenses_tabular/: CMakeLists.txt
maya/: CMakeLists.txt
src/: ._zoic.cpp  CMakeLists.txt  arnoldCamera.pro  buildflags.txt  camera_sandbox.cpp  draw.py  draw.zoic  imageReader.cpp  linePlaneIntersection.cpp  shadertoy_debugging.cpp  testScene.exr  testScene_lights.ma  triangleSamplingDraw.py  zenoCamera.cpp  zenoCamera.os  zoic.cpp  zoic.dylib  zoic.mtd  zoic.os  zoic.pro  zoic_backup.cpp  zoic_writeup.txt  zoic_writeup_02.txt
src/imgs/: teapot_sample_distribution.png~  teapot_sample_distribution_10000.png~
src/imgs/wip/: testScene_lights.ass
src/s_kallweit/: realistic.cpp
tests/: spheres.ass
z_ae/: aiZenoCameraTemplate.py
z_bin/: Makefile  libarnoldCamera.so.1  zenoCamera.mtd
(+30 files in other folders)
